# iconnx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
docs/performance/: 2026-04-09-leadline-bench-findings.md  2026-04-11-clippy-baseline-cleanup-results.md  2026-04-11-cycle1-mul-sin-pow-mul-add-results.md  2026-04-11-cycle1.5a-gpu-side-timing-results.md  2026-04-11-cycle2-zero-cost-shape-ops-results.md  2026-04-11-cycle3-addmuladd-detection-gap-results.md  2026-04-12-cycle5-dynamic-addmuladd-results.md  2026-04-12-cycle7-cudnn-fused-lstm-results.md  2026-04-12-optimization-journey-cycles-1-7.md
docs/superpowers/plans/: 2026-04-10-mul-sin-pow-mul-add-fusion.md  2026-04-11-addmuladd-detection-gap.md  2026-04-11-clippy-baseline-cleanup.md  2026-04-11-dynamic-addmuladd-fusion.md  2026-04-11-dynamic-addmuladd-scheduling.md  2026-04-11-gpu-side-kernel-timing.md  2026-04-11-zero-cost-unsqueeze-reshape-squeeze.md  2026-04-12-cudnn-conv-algo-selection.md  2026-04-12-cudnn-fused-lstm.md  2026-04-17-phase2-graph-ir.md  2026-04-17-phase3-graph-optimizer.md  2026-04-19-phase4-graph-optimizer-ii.md  2026-04-19-pre-phase4-hygiene.md  2026-04-25-ws3-fp16-quantization.md  2026-04-25-ws4-int8-quantization.md  2026-04-26-ws3.5-bf16.md  2026-04-29-ws5-observability.md  2026-05-24-ws6-gpu-ocr.md  ws6-followups-batching-perf.md
docs/superpowers/specs/: 2026-04-10-mul-sin-pow-mul-add-fusion-design.md  2026-04-11-addmuladd-detection-gap-design.md  2026-04-11-clippy-baseline-cleanup-design.md  2026-04-11-dynamic-addmuladd-fusion-design.md  2026-04-11-dynamic-addmuladd-scheduling-design.md  2026-04-26-ws3.5-bf16-design.md  (+13 more)
examples/: gpu_infer.rs  ocr_bench.rs
src/: attributes.rs  engine.rs  errors.rs  graph.rs  graph_executor.rs  lib.rs  onnx_parser.rs  op_support.rs  opset.rs  tensor.rs  tolerance.rs
src/cuda/: bridge.rs  checkpoints.rs  context.rs  cufft.rs  differential.rs  lstm.rs  matmul.rs  memory_pool.rs  mod.rs  reduction.rs  tensor.rs  validation.rs
src/ir/: graph.rs  lowering.rs  mod.rs  plan.rs
src/operators/: add.rs  and.rs  atan.rs  cast.rs  clip.rs  concat.rs  constant.rs  constant_of_shape.rs  conv.rs  conv_transpose.rs  cos.rs  cumsum.rs  dequantize_linear.rs  div.rs  dynamic_quantize_linear.rs  equal.rs  erf.rs  exp.rs  expand.rs  fftw_stft.rs  flatten.rs  floor.rs  gather.rs  gemm.rs  global_average_pool.rs  greater.rs  greater_or_equal.rs  layer_normalization.rs  leaky_relu.rs  less.rs  lstm.rs  matmul.rs  matmul_integer.rs  max_pool.rs  mod.rs  mul.rs  nonzero.rs  pad.rs  pow.rs  range.rs  (+21 more)
src/validate/: capabilities.rs  incompat.rs  mod.rs  tolerance_hint.rs
tests/: add_bfloat16_test.rs  batchnorm_parity_test.rs  bert_base_bf16_test.rs  bool_routing_test.rs  cast_bfloat16_executor_dispatch_test.rs  cast_bfloat16_test.rs  cast_float16_test.rs  clip_input_form_parity_test.rs  concat_bfloat16_test.rs  conformance_known_failures.toml  constant_of_shape_int64_test.rs  conv1d_bfloat16_test.rs  conv_dilation_test.rs  conv_float16_test.rs  conv_transpose_2d_parity_test.rs  copy_bfloat16_test.rs  debug_where_expand.rs  dequantize_linear_test.rs  distilbert_int8_test.rs  div_bfloat16_test.rs  div_int64_test.rs  dynamic_quantize_linear_test.rs  dynamic_shape_guard_test.rs  end_to_end_test.rs  erf_bfloat16_test.rs  expand_bfloat16_test.rs  flatten_executor_test.rs  from_model_test.rs  fusion_detection_test.rs  gather_axis_attribute_test.rs  gather_bfloat16_test.rs  global_average_pool_test.rs  gpu_bfloat16_hardware_capability_test.rs  gpu_dtype_bfloat16_roundtrip_test.rs  gpu_dtype_float16_bool_roundtrip_test.rs  gpu_dtype_int8_uint8_roundtrip_test.rs  graph_executor_test.rs  grouped_conv2d_parity_test.rs  hardsigmoid_parity_test.rs  hardswish_parity_test.rs  (+46 more)
tests/common/: kokoro_model.rs  mod.rs  npy.rs  ort_parity.rs
tests/conformance_data/: regenerate.sh
tests/operators/: activation_test.rs  add_test.rs  and_test.rs  cast_test.rs  clip_test.rs  comparison_test.rs  concat_test.rs  constant_of_shape_test.rs  conv_test.rs  conv_transpose_test.rs  cumsum_test.rs  div_test.rs  equal_test.rs  exp_test.rs  expand_test.rs  floor_test.rs  fused_mul_sin_pow_mul_add_test.rs  gather_test.rs  gemm_test.rs  gpu_event_timer_test.rs  greater_or_equal_test.rs  layer_norm_test.rs  leaky_relu_test.rs  less_test.rs  lstm_test.rs  math_test.rs  matmul_test.rs  mod.rs  mul_test.rs  nonzero_test.rs  pad_test.rs  pow_test.rs  range_test.rs  reduce_mean_test.rs  reduce_sum_test.rs  reduce_test.rs  reshape_precompute_test.rs  reshape_test.rs  resize_test.rs  round_test.rs  (+16 more)
tests/scripts/: make_ws5_conformance_self_test_fixtures.py  make_ws5_synthetic_fixtures.py  make_ws6_op_fixtures.py
(+90 files in other folders)
