[package]
name = "iconnx"
version = "0.1.0"
edition = "2021"
authors = ["Ryan O'Neill <ryan.oneill@gmail.com>"]
license = "MIT"
description = "High-performance ONNX inference engine with CUDA GPU acceleration"
repository = "https://github.com/ryanoneill/iconnx"
homepage = "https://github.com/ryanoneill/iconnx"
documentation = "https://docs.rs/iconnx"
readme = "README.md"
keywords = ["onnx", "inference", "gpu", "cuda", "machine-learning"]
categories = ["science", "algorithms", "mathematics"]
rust-version = "1.87"

[dependencies]
# ONNX parsing
prost = "0.13"

# CPU tensors
ndarray = "0.16"

# IEEE binary16 (Float16 / FP16) support — `half::f16` element type for
# `Tensor::Float16` and (post-M3.3) `GpuTensor::Float16`. WS-3 M3.1.
half = "2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# FFT operations (for STFT operator)
rustfft = "6.2"
fftw = "0.8"

# Garboard — safe Rust CUDA bindings. Iconnx's sole CUDA dependency
# post-Phase-1 migration: device, stream, memory, NVRTC, cuBLAS, and
# cuDNN conv/RNN all go through garboard.
[dependencies.garboard]
git = "https://github.com/ryanoneill/garboard.git"
branch = "main"
features = ["cuda"]
optional = true

# garboard-sys — raw CUDA Driver FFI bindings. Needed for the
# init-time LSTM weight-pack D2D copies (`cuMemcpyDtoD_v2`) in
# `cuda/cudnn/rnn.rs`, until garboard exposes a sub-slice /
# stream-scoped D2D API. Pinned to the same git source + branch as
# `garboard` to keep the CUDA-header version in lockstep.
[dependencies.garboard-sys]
git = "https://github.com/ryanoneill/garboard.git"
branch = "main"
optional = true

# bytemuck — garboard's DeviceSlice<T> requires T: bytemuck::Pod. Used by
# iconnx for the `Pod` derive on CufftComplex and friends.
[dependencies.bytemuck]
version = "1.14"
features = ["derive"]
optional = true

# serde / serde_json — used by the `debug-inference` checkpoint system
# to (de)serialize ORT reference metadata.
[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
default = ["cuda"]
# Enable CUDA GPU acceleration.
cuda = ["dep:garboard", "dep:garboard-sys", "dep:bytemuck"]
# Enable GPU inference debugging: tensor validation, checkpoints, differential testing
debug-inference = ["dep:serde", "dep:serde_json"]

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
# Reference implementation for validation
ort = { version = "2.0.0-rc.10", features = ["cuda", "half", "download-binaries"] }
# Async runtime for tests
tokio = { version = "1.0", features = ["full"] }
# Temp files for testing
tempfile = "3.8"
# NumPy file parsing for test fixtures
npyz = "0.8"
# Serialization for test fixtures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
# Build docs.rs without CUDA (since their build server likely doesn't have it)
no-default-features = true
